# cphere

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  initialize_project.py
assets/: pre-generated-level.save
assets/models/: cogship.blend  cogship.ubj  cube.ubj  earth_sphere.ubj  house.ubj  pine.ubj  sphere.ubj
assets/shaders/: building.frag  building.vert  building_ghost.frag  building_ghost.vert  clouds.frag  clouds.vert  earth.frag  earth.vert  earth_atmosphere.frag  earth_atmosphere.vert  flare.frag  post_processing.frag  post_processing.vert  ship.frag  ship.vert  ship_wake.frag  ship_wake.vert  space_box.frag  space_box.vert  sun.frag  sun.vert  sun_and_flare.vert  terrain.frag  terrain.vert  terrain_caustics.frag  terrain_caustics.vert  test.frag  tree.frag  tree.vert  waves.frag  waves.vert
assets/textures/: cogship.dds  house.dds  noise.dds  pine_tree.dds  sea_dudv.dds  sea_normals.dds  sea_waves.dds  sun.dds  tc_caustics.dds  tc_foam.dds  tc_grass.dds  tc_grass_dead.dds  tc_rock.dds  tc_rock2.dds  tc_rock2_normal.dds  tc_rock_normal.dds  tc_sand.dds  tc_sand_normal.dds
assets/textures/space_cubemap/: back.dds  bottom.dds  front.dds  left.dds  right.dds  to_dds.sh  top.dds
assets/textures/sun/: flare0.dds  flare1.dds  flare3.dds  flare4.dds  flare5.dds  flares.xcf
blender/: earth_sphere.blend  lens_flare.blend  stars_cubemap.blend  sun.blend
blender/house/: TexturesCom_Pavement_CobblestoneMedieval01_4x4_1K_albedo.tif  TexturesCom_Pavement_CobblestoneMedieval01_4x4_1K_ao.tif  TexturesCom_Pavement_CobblestoneMedieval01_4x4_1K_normal.tif  TexturesCom_Roofing_Slate_1K_albedo.tif  TexturesCom_Roofing_Slate_1K_ao.tif  TexturesCom_Roofing_Slate_1K_normal.tif  house.blend  house.xcf  roof.tif  stone.tif
blender/ships/: cogship.blend
blender/trees/: pine.blend
desktop/: CMakeLists.txt
html/: CMakeLists.txt  index.html
source/: entt.hpp  graph.cpp  graph.h  level_screen.cpp  main.cpp  sea_graph.cpp  sea_graph.h  serialization.h
source/level/: cloud_renderer.cpp  cloud_renderer.h  island.cpp  island.h  level.cpp  level.h  planet.cpp  planet.h  planet_camera_movement.cpp  planet_camera_movement.h  sea_graph.cpp  sea_graph.h  ship.h  ships.h  space_renderer.cpp  space_renderer.h  wave_renderer.cpp  wave_renderer.h
source/level/buildings/: blueprint.h  blueprint_list.inc  building.h  (+2 more)
source/planet_generation/: earth_generator.cpp  earth_generator.h  island_generator.cpp  island_generator.h  island_outliner.cpp  island_outliner.h  island_shape_generator.cpp  island_shape_generator.h  planet_generator.cpp  planet_generator.h
source/server_client/: client.h  events.cpp  events.h  server.cpp  server.h
(+23 files in other folders)
